# open-pinball-db

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
opdb/: __init__.py  client.py  exceptions.py
open_pinball_db/: __init__.py  client.py
tests/: test_client.py
tests/fixtures/: machine.json
