[tool.poetry]
name = "python_opdb_client"
version = "0.1.0"
description = "An open pinball database client for Python"
authors = ["Mollemoll <jonas.molander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
responses = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
